Set height of integration tabs to prevent modal from growing too large

--- a/app/assets/stylesheets/admin/styles/plugins/_jquery_ui.scss
+++ b/app/assets/stylesheets/admin/styles/plugins/_jquery_ui.scss
@@ -423,6 +423,7 @@
     .ui-tabs-panel {
       float: right;
       width: 605px;
+      height: 500px;
       padding: 15px 30px;
       color: $color-body-text;
     }
